L05-T2 Use old API of set creation to for null values insertion